# astrobot

./: CMakeLists.txt  README.md  package.xml
config/: astrobot.rviz  first.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: gz_sim_bridge_launch.py  launch_sim.launch.py  rsp.launch.py
worlds/: obstacle
